<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files and config for full TurtleBot3 bringup.
    This package owns no nodes — it only wires other packages together via launch files.
  </description>
  <maintainer email="todo@todo.com">saman</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system: ament_cmake (standard for launch-only packages) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps: packages this launch file will bring up -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>tb3_odometry</exec_depend>
  <exec_depend>tb3_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
