<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_navigation</name>
  <version>0.1.0</version>
  <description>
    SLAM configuration, Nav2 autonomous navigation launch files,
    Python nav goal sender, and C++ waypoint follower for TurtleBot3 Burger.
  </description>
  <maintainer email="todo@todo.com">saman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>

  <!-- Nav2 stack -->
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
