<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_odometry</name>
  <version>0.1.0</version>
  <description>
    Wheel odometry, TF2 broadcasting, IMU republishing, and EKF sensor fusion
    for TurtleBot3 Burger. Python nodes first; C++ ports added in Step 12.
  </description>
  <maintainer email="todo@todo.com">saman</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system: ament_cmake supports both C++ and Python in one package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS2 client libraries -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- Message types this package uses -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- EKF sensor fusion (robot_localization package) -->
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
